2006-09-25  Nicola Pero <nicola.pero@meta-innovation.com>

	* Master/source-distribution.make: Use TAR everywhere instead of
	hardcoded tar (Patch by BALATON Zoltan <balaton@eik.bme.hu>).

2006-09-20  Nicola Pero <nicola.pero@meta-innovation.com>

	By default compile everything with debug=yes.  To get the
	traditional behaviour, please use 'make debug=no'.
	* common.make (debug): Turn on debug by default.
	
2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Master/subproject.make (internal-distclean): Do nothing.
	(internal-clean): Remove 'Resources' directory on 'clean' too.
	* Master/tool.make (internal-distclean): Do nothing.
	(internal-clean): Removed 'Resources' directory on 'clean'.	

	* Instance/subproject.make (GNUSTEP_SHARED_BUNDLE_RESOURCE_PATH):
	Added GNUSTEP_BUILD_DIR.
	* Instance/tool.make (GNUSTEP_SHARED_BUNDLE_RESOURCE_PATH): Added
	GNUSTEP_BUILD_DIR.

	* Master/subproject.make (.PHONY): Removed build-headers.
	
2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Instance/framework.make (UPDATE_CURRENT_SYMLINK_RULE): Removed
	phone update-symlink-rule target that was being executed at every
	make, and replaced with a rule to build the symlink which is not
	executed if the symlink is there already.
	(.PHONY): Removed update-symlink-rule.

2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Instance/framework.make: Removed warnings for
	CURRENT_VERSION_NAME and xxx_TOOLS that were removed 4 years ago.

2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Master/rules.make (INTERNAL_$${type}_NAME, TARGET): Variables
	removed; they were deprecated on Jan 2002.

2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* rules.make (GNUSTEP_CONFIG_FILE, GNUSTEP_USER_CONFIG_FILE):
	Added empty rules to prevent make wasting time trying to rebuild
	config files using implicit rules.

	* Master/rules.make (.PHONY): Added build-headers,
	before-build-headers, after-build-headers.
